# kau-c

./: .gitignore  CMakeLists.txt  CMakePresets.json
backend/: main.go
backend/protocol/: handle.go
cmake/toolchains/: windows-x64_64.cmake  windows-x86_64.cmake
documents/: protocol.md
include/compete/: protocol.h
include/config/: config.h
include/constant/: debug.h  file.h  info.h  lane.h  loss.h  note.h  protocol.h  score.h  verdict.h  video.h
include/game/: compete.h  play.h
include/layout/: debug.h  info.h  lane.h  loss.h  note.h  score.h  string.h  video.h
include/note/: long.h  short.h
include/stage/: info.h  pattern.h
include/video/: player.h
resources/: config.json
scripts/: pyproject.toml
scripts/src/: pattern.py
src/: main.c  main.cpp
src/compete/: protocol.c
src/config/: config.cpp
src/game/: compete.c  play.c
src/layout/: debug.cpp  info.c  lane.c  loss.c  note.c  score.c  string.c  video.cpp
src/note/: long.c  short.c
src/stage/: info.cpp  pattern.cpp
src/video/: player.cpp
